--- a/views/inc/content/contacts.ejs
+++ b/views/inc/content/contacts.ejs
@@ -3,26 +3,41 @@
     <div class="row">
       <div class="col-md-12">
         <div class="col-md-6 animate-box">
+          <% if (typeof error === "string")  { %>
+            <div class="alert alert-danger">
+            
+              <%= error%>
+            </div>
+  
+            <% }%>
+  
+            <% if (typeof success === "string")  { %>
+              <div class="alert alert-success">
+              
+                <%= success%>
+              </div>
+    
+              <% }%>
           <h3>Entre em Contato</h3>
-          <form action="#">
+          <form action="/contacts" method="POST">
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="sr-only" for="name">Nome</label>
-                <input type="text" id="name" class="form-control" placeholder="Seu nome" />
+                <input type="text" id="name"  name="name" class="form-control" placeholder="Seu nome" value = "<%= body.name %>" />
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="sr-only" for="email">E-mail</label>
-                <input type="text" id="email" class="form-control" placeholder="Seu endereço de e-mail" />
+                <input type="text" id="email" name="email" class="form-control" placeholder="Seu endereço de e-mail" value = "<%= body.email %>"/>
               </div>
             </div>
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="sr-only" for="message">Mensagem</label>
-                <textarea name="message" id="message" cols="30" rows="10" class="form-control"
-                  placeholder="Escreve alguma coisa"></textarea>
+                <textarea name="message" id="message" name="message" cols="30" rows="10" class="form-control"
+                  placeholder="Escreve alguma coisa" <%= body.message %> ></textarea>
               </div>
             </div>
             <div class="form-group">
