--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -22,7 +22,7 @@
     <header class="main-header">
 
       <!-- Logo -->
-      <a href="index.html" class="logo">
+      <a href="/" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini">HCODE</span>
         <!-- logo for regular state and mobile devices -->
@@ -95,37 +95,37 @@
           <li class="header">MENU</li>
           <!-- Optionally, you can add icons to the links -->
           <li class="active">
-            <a href="index.html">
+            <a href="/">
               <i class="fa fa-home"></i>
               <span>Tela Inicial</span>
             </a>
           </li>
           <li>
-            <a href="menus.html">
+            <a href="/admin/menus">
               <i class="fa fa-cutlery"></i>
               <span>Menu</span>
             </a>
           </li>
           <li>
-            <a href="reservations.html">
+            <a href="/admin/reservations">
               <i class="fa fa-calendar-check-o"></i>
               <span>Reservas</span>
             </a>
           </li>
           <li>
-            <a href="contacts.html">
+            <a href="/admin/contacts">
               <i class="fa fa-comments"></i>
               <span>Contatos</span>
             </a>
           </li>
           <li>
-            <a href="users.html">
+            <a href="/admin/users">
               <i class="fa fa-users"></i>
               <span>Usuários</span>
             </a>
           </li>
           <li>
-            <a href="emails.html">
+            <a href="/admin/emails">
               <i class="fa fa-envelope"></i>
               <span>E-mails</span>
             </a>
