--- a/views/admin/menus.ejs
+++ b/views/admin/menus.ejs
@@ -74,7 +74,7 @@
 <div class="modal fade" id="modal-create">
 	<div class="modal-dialog">
 		<div class="modal-content" style="border-top: 3px solid #00a65a">
-			<form method="post">
+			<form method="post" action="/admin/menus">
 				<div class="modal-header">
 					<button
 						type="button"
@@ -147,7 +147,7 @@
 <div class="modal fade" id="modal-update">
 	<div class="modal-dialog">
 		<div class="modal-content" style="border-top: 3px solid #00c0ef">
-			<form method="post">
+			<form method="post" action="/admin/menus">
 				<input type="hidden" name="id" />
 				<div class="modal-header">
 					<button
@@ -221,30 +221,33 @@
 <%- include('inc/footer') -%>
 
 <script src="/js/MyFileReader.js"></script>
+<script src="/js/formsalve.js"></script>
 
 <script>
 	new MyFileReader('#modal-create [type=file]', '#modal-create img');
 	new MyFileReader('#modal-update [type=file]', '#modal-update img');
 
 	let formCreate = document.querySelector('#modal-create form');
-	formCreate.addEventListener('submit', (e) => {
-		e.preventDefault();
 
-		let formCreateData = new FormData(formCreate);
-		W;
-		fetch('/admin/menus', {
-			method: 'POST',
-			body: formCreateData,
+	formCreate
+		.save()
+		.then((json) => {
+			window.location.reload();
 		})
-			.then((response) => {
-				response.json();
-			})
-			.then((json) => {
-				window.location.reload();
-			});
-	});
+		.catch((err) => {
+			console.log(err);
+		});
 
 	let formUpdate = document.querySelector('#modal-update form');
+
+	formUpdate
+		.save()
+		.then(json => {
+			window.location.reload();
+		})
+		.catch((err) => {
+			console.log(err);
+		});
 
 	[...document.querySelectorAll('.btn-update')].forEach((btn) => {
 		btn.addEventListener('click', (e) => {
