--- a/views/admin/contacts.ejs
+++ b/views/admin/contacts.ejs
@@ -1,58 +1,67 @@
 <%- include('inc/header') -%>
 
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-      <!-- Content Header (Page header) -->
-      <section class="content-header">
-        <h1>
-          Contatos
-        </h1>
-        <ol class="breadcrumb">
-          <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
-          <li class="active">Contatos</li>
-        </ol>
-      </section>
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+	<!-- Content Header (Page header) -->
+	<section class="content-header">
+		<h1>Contatos</h1>
+		<ol class="breadcrumb">
+			<li>
+				<a href="/"><i class="fa fa-home"></i> Home</a>
+			</li>
+			<li class="active">Contatos</li>
+		</ol>
+	</section>
 
-      <!-- Main content -->
-      <section class="content container-fluid">
+	<!-- Main content -->
+	<section class="content container-fluid">
+		<div class="box">
+			<div class="box-header">
+				<h3 class="box-title">Lista</h3>
+			</div>
+			<!-- /.box-header -->
+			<div class="box-body no-padding">
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+							<th style="width: 10px">#</th>
+							<th>Nome</th>
+							<th>E-mail</th>
+							<th>Mensagem</th>
+							<th style="min-width: 75px">Ações</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% data.forEach(function(row){%>
+						<tr data-row="<%= JSON.stringify(row); %>">
+							<td><%= row.id %></td>
+							<td><%= row.name %></td>
+							<td><%= row.email %></td>
+							<td><%= row.message %></td>
+							<td>
+								<button type="button" class="btn btn-xs btn-danger btn-delete">
+									<i class="fa fa-trash"></i> Excluir
+								</button>
+							</td>
+						</tr>
+						<% }); %>
+					</tbody>
+				</table>
+			</div>
+			<!-- /.box-body -->
+		</div>
+	</section>
+	<!-- /.content -->
+</div>
+<!-- /.content-wrapper -->
 
-        <div class="box">
-          <div class="box-header">
-            <h3 class="box-title">Lista</h3>
-          </div>
-          <!-- /.box-header -->
-          <div class="box-body no-padding">
-            <table class="table table-striped table-hover">
-              <thead>
-                <tr>
-                  <th style="width: 10px">#</th>
-                  <th>Nome</th>
-                  <th>E-mail</th>
-                  <th>Mensagem</th>
-                  <th style="min-width: 75px;">Ações</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1.</td>
-                  <td>Hcode</td>
-                  <td>contato@hcode.com.br</td>
-                  <td>Mussum Ipsum, cacilds vidis litro abertis. Manduma pindureta quium dia nois paga. Viva Forevis
-                    aptent taciti sociosqu ad
-                    litora torquent. In elementis mé pra quem é amistosis quis leo. Admodum accumsan disputationi eu
-                    sit. Vide electram sadipscing
-                    et per.</td>
-                  <td><button type="button" class="btn btn-xs btn-danger btn-delete"><i class="fa fa-trash"></i> Excluir</button></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <!-- /.box-body -->
-        </div>
+<%- include('inc/footer') -%>
 
-      </section>
-      <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
+<script src="/js/Grid.js"></script>
 
-    <%- include('inc/footer') -%>
+<script>
+	new Grid({
+		deleteMessage: 'Confirma a exclusão da menssagem: ${data.name}',
+		deleteURL: '/admin/contacts/${data.id}',
+	});
+</script>
