--- a/views/inc/content/reservations.ejs
+++ b/views/inc/content/reservations.ejs
@@ -48,7 +48,7 @@
             <div class="row form-group">
               <div class="col-md-12">
                 <label for="inputDate">Data</label>
-                <input type="text" id="inputDate" name="date" class="form-control"  value = "<%= body.date %>"/>
+                <input type="date"  name="date" class="form-control"  value = "<%= body.date %>"/>
               </div>
             </div>
             <div class="row form-group">
