--- a/views/inc/content/subscribe.ejs
+++ b/views/inc/content/subscribe.ejs
@@ -1,25 +1,66 @@
 <div id="gtco-subscribe">
-  <div class="gtco-container">
-    <div class="row animate-box">
-      <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-        <h2 class="cursive-font">Se inscrever</h2>
-        <p>Receba as novidades do nosso restaurante</p>
-      </div>
-    </div>
-    <div class="row animate-box">
-      <div class="col-md-8 col-md-offset-2">
-        <form class="form-inline">
-          <div class="col-md-6 col-sm-6">
-            <div class="form-group">
-              <label for="email" class="sr-only">E-mail</label>
-              <input type="email" class="form-control" id="email" placeholder="Seu E-mail" />
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6">
-            <button type="submit" class="btn btn-default btn-block">Inscrever</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+	<div class="gtco-container">
+		<div class="row animate-box">
+			<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+				<h2 class="cursive-font">Se inscrever</h2>
+				<p>Receba as novidades do nosso restaurante</p>
+			</div>
+		</div>
+		<div class="row animate-box">
+			<% if (typeof error === "string") { %>
+			<div class="alert alert-danger"><%= error%></div>
+
+			<% }%> <% if (typeof success === "string") { %>
+			<div class="alert alert-success"><%= success%></div>
+
+			<% }%>
+			<div class="col-md-8 col-md-offset-2">
+				<form
+					class="form-inline"
+					id="form-subscribe"
+					method="POST"
+					action="/subscribe"
+				>
+					<div class="col-md-6 col-sm-6">
+						<div class="form-group">
+							<label for="email" class="sr-only">E-mail</label>
+							<input
+								type="email"
+								class="form-control"
+								id="email"
+								placeholder="Seu E-mail"
+								name="email"
+								required
+							/>
+						</div>
+					</div>
+					<div class="col-md-6 col-sm-6">
+						<button type="submit" class="btn btn-default btn-block">
+							Inscrever
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
+
+<script src="/js/formsalve.js"></script>
+<script>
+	let formSubscribe = document.querySelector('#form-subscribe form');
+
+	if (formSubscribe) {
+		formSubscribe
+			.fetch(form.action, {
+				method: form.method,
+				body: formData,
+			})
+			.then(() => {
+				alert('E-mail inscrito!');
+				formSubscribe.reset();
+			})
+			.catch((err) => {
+				alert(err);
+			});
+	}
+</script>
