--- a/views/admin/reservations.ejs
+++ b/views/admin/reservations.ejs
@@ -29,7 +29,7 @@
 			<div class="box-header" style="height: 44px">
 				<div class="box-tools">
 					<form action="">
-						<div class="form-group" style="width: 182px; float: left">
+						<div class="form-group" style="width: 220px; float: left">
 							<div class="input-group">
 								<div class="input-group-addon">
 									<i class="fa fa-calendar"></i>
@@ -42,7 +42,7 @@
 								/>
 							</div>
 						</div>
-						<div class="form-group" style="width: 182px; float: left">
+						<div class="form-group" style="width: 220px; float: left">
 							<div class="input-group">
 								<div class="input-group-addon">até</div>
 								<input
@@ -61,6 +61,10 @@
 			</div>
 			<!-- /.box-header -->
 			<div class="box-body no-padding">
+				<div style="padding: 10px">
+					<canvas id="chart" style="height: 250px"> </canvas>
+				</div>
+
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
@@ -281,6 +285,7 @@
 
 <script src="/js/Grid.js"></script>
 <script src="/js/moment.min.js"></script>
+<script src="/admin/bower_components/chart.js/dist/Chart.min.js"></script>
 <script src="/js/formsalve.js"></script>
 
 <script>
@@ -298,4 +303,51 @@
 			}
 		},
 	});
+
+	let chart = new Chart(document.querySelector('#chart').getContext('2d'), {
+		type: 'line',
+		data: {},
+
+		options: {
+			tooltips: {
+				mode: 'index',
+				intersect: false,
+			},
+			scales: {
+				xAxes: [
+					{
+						display: true,
+						scaleLabel: {
+							display: true,
+							labelString: 'Mês',
+						},
+					},
+				],
+				yAxes: [
+					{
+						display: true,
+						scaleLabel: {
+							display: true,
+							labelString: 'Reservas',
+						},
+					},
+				],
+			},
+		},
+	});
+	fetch(`/admin/reservations/chart${window.location.search}`)
+		.then((response) => response.json())
+		.then((json) => {
+			chart.data = {
+				labels: json.months,
+				datasets: [
+					{
+						data: json.values,
+						label: 'Reservas',
+						backgroundColor: 'rgb(54,162,235)',
+					},
+				],
+			};
+			chart.update();
+		});
 </script>
